[Anhvv28] update componet giveback

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-  <meta name="description" content="Website bán giày NiceShoes" />
+  <meta name="description" content="Website bán giày InnoString Stride" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <title>InnoString Stride</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
